finalize proceedings format

--- a/vonLaszewski-cloud-vol-7.tex
+++ b/vonLaszewski-cloud-vol-7.tex
@@ -18,7 +18,7 @@
 }
 
 \newcommand{\TITLE}{Proceedings of Clouds and Big Data}
-\newcommand{\SUBTITLE}{Intelligent Systems Engeneering Department\\Indiana University \\Vol 6.}
+\newcommand{\SUBTITLE}{Intelligent Systems Engeneering Department\\Indiana University \\Vol 7.}
 \newcommand{\AUTHOR}{Gregor von Laszewski}
 \newcommand{\EMAIL}{laszewski@gmail.com}
 \newcommand{\LINK}{TBD}
@@ -34,6 +34,8 @@
 \input{bio-list.tex}
 
 
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \addcontentsline{toc}{chapter}{\textcolor{ocre}{Bibliography}}
 
@@ -47,6 +49,9 @@
 \printindex
 
 
+\appendix
+
+\lstinputlisting{bios.py}
 
 
 \end{document}
