add graphics path

--- a/vonLaszewski-cloud-vol-7.tex
+++ b/vonLaszewski-cloud-vol-7.tex
@@ -2,26 +2,22 @@
 
 \documentclass{../hid-sample/tex/format/laszewski}
 
-\graphicspath{%
-{./}%
-{../hid-sample/tex/format/images/}%
-}
 
-
-
-\addbibresource{abstract-hid.bib}  
+\addbibresource{hid-sample.bib}  
 \defbibheading{bibempty}{}
 
 \graphicspath{%
 {./}%
 {../hid-sample/tex/format/images/}%
+{../hid-sp18-417/technology/}%
 }
 
 \newcommand{\TITLE}{Proceedings of Clouds and Big Data}
 \newcommand{\SUBTITLE}{Intelligent Systems Engeneering Department\\Indiana University \\Vol 7.}
 \newcommand{\AUTHOR}{Gregor von Laszewski}
 \newcommand{\EMAIL}{laszewski@gmail.com}
-\newcommand{\LINK}{TBD}
+\newcommand{\LOCATION}{https://drive.google.com/file/d/1h6_ZRmlCRIFMHG861wSyriPzn9rXxgKT/view}
+
 
 
 
