--- a/vonLaszewski-cloud-vol-7.tex
+++ b/vonLaszewski-cloud-vol-7.tex
@@ -16,9 +16,8 @@
 \newcommand{\SUBTITLE}{Intelligent Systems Engeneering Department\\Indiana University \\Vol 7.}
 \newcommand{\AUTHOR}{Gregor von Laszewski}
 \newcommand{\EMAIL}{laszewski@gmail.com}
-\newcommand{\LOCATION}{https://drive.google.com/file/d/1h6_ZRmlCRIFMHG861wSyriPzn9rXxgKT/view}
-
-
+\newcommand{\LOCATION}{http://cyberaide.org/papers/vonLaszewski-cloud-vol-7.pdf}
+ 
 
 
 \begin{document}
