improve proceedings script

--- a/vonLaszewski-cloud-vol-7.tex
+++ b/vonLaszewski-cloud-vol-7.tex
@@ -3,7 +3,8 @@
 \documentclass{../hid-sample/tex/format/laszewski}
 
 
-\addbibresource{hid-sample.bib}  
+\input{vol7-bib.tex}
+%\addbibresource{hid-sample.bib}  
 \defbibheading{bibempty}{}
 
 \graphicspath{%
@@ -42,9 +43,9 @@
 \printindex
 
 
-\appendix
+% \appendix
 
-\lstinputlisting{bios.py}
+% \lstinputlisting{bios.py}
 
 
 \end{document}
