--- a/start-project.tex
+++ b/start-project.tex
@@ -100,7 +100,7 @@
 
 \noindent
 \titlefont Cloud and Big Data\\Technologies \par
-\epigraph{Vol. 8, Spring 2018}
+\epigraph{Vol. 9, Projects, Spring 2018}
 {\textit{Bloomington, Indiana} \\ \vspace{3cm} \LOCATION}
 \null\vfill
 \vspace*{1cm}
